--- a/App.css
+++ b/App.css
@@ -8,11 +8,16 @@ body {
   --elements-color: white;
   margin: 0;
   font-family: Nunito, sans-serif;
+}
+
+main,
+header {
   background-color: var(--background-color);
   color: var(--text-color);
 }
 
-body.dark {
+main.dark,
+header.dark {
   --background-color: hsl(207, 26%, 17%);
   --text-color: white;
   --elements-color: hsl(209, 23%, 22%);
@@ -20,6 +25,7 @@ body.dark {
 
 main {
   padding: 24px;
+  min-height: calc(100vh - 73px);
 }
 
 a {
@@ -31,6 +37,9 @@ a {
   box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.1);
   padding-inline: 24px;
   background-color: var(--elements-color);
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .header-content {
@@ -52,8 +61,10 @@ a {
 .countries-container {
   max-width: 1200px;
   margin-top: 16px;
-  display: flex;
-  gap: 64px;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 32px;
   flex-wrap: wrap;
   margin-inline: auto;
   justify-content: space-between;
@@ -61,7 +72,6 @@ a {
 
 .country-card {
   display: inline-block;
-  width: 250px;
   border-radius: 8px;
   overflow: hidden;
   padding-bottom: 24px;
@@ -69,6 +79,18 @@ a {
   transition: all 0.2s ease-in-out;
   background-color: var(--elements-color);
 }
+
+.flag-container {
+  height: 160px;
+  overflow: hidden;
+}
+
+.country-card img {
+  width: 100%;
+  /* height: 100%; */
+  object-fit: cover;
+}
+
 
 .country-card:hover {
   transform: scale(1.03);
@@ -87,11 +109,6 @@ a {
 .card-text p {
   margin-block: 8px;
 }
-
-.country-card img {
-  width: 100%;
-}
-
 
 .search-filter-container {
   max-width: 1200px;
